fix overflow and scrolling

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -20,6 +20,15 @@ button {
     }
 }
 
+h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+hr {
+    width: 100%;
+    box-sizing: border-box;
+}
+
 form {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     label {
