--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -16,15 +16,15 @@ main {
     flex: 1;
     background-color: rgb(88, 88, 88);
     overflow-y: hidden;
+    padding: 10px;
 
     .page-layout {
         animation: enterPage .3s ease-out;
 
-
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 10px;
     }
 
     .go-back {
@@ -120,18 +120,14 @@ main#post-content {
 
     .page-layout {
         gap: 10px;
-        flex-direction: column;
         align-items: start;
+        overflow-y: scroll;
 
         .title {
             width: 100%;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
-        }
-
-        * {
-            box-sizing: border-box;
         }
     }
 }
